applications-and-source-code/part-order-app-java/k8s-with-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: part-order-app-ingress
  labels:
    env: dev
